# inference-optimization-bench

./: .cursorrules  .env.template  .gitignore  README.md  TASKS.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/agents/: build-dashboard.md  build-k8s-job.md  build-nim-backend.md  build-workloads.md
.github/workflows/: ci.yml
bench/: metrics.py  run_bench.py  sweep.py  warmup.py
bench/backends/: __init__.py  llamacpp_backend.py  nim_backend.py  triton_backend.py  vllm_backend.py
bench/workloads/: __init__.py  base_workload.py  multi_turn.py  single_turn.py  tool_calling.py
configs/: full_sweep.yaml  quick.yaml
deploy/: Dockerfile
deploy/k8s/: bench-job.yaml
notebooks/: quant_comparison.ipynb
quantization/: awq_quantize.py  gguf_convert.sh  gptq_quantize.py
reporting/: dashboard.py  generate_report.py
tests/: test_backends.py  test_dashboard.py  test_dashboard_cli.py  test_metrics.py  test_metrics_gpu.py  test_nim_backend.py  test_warmup.py  test_workloads.py
trtllm/: benchmark_trtllm.py  build_engine.sh  run_engine.py
